[tool.poetry]
name = "semsis"
version = "0.1.2"
description = "A libary for semantic similarity search"
authors = ["Hiroyuki Deguchi <deguchi.hiroyuki@nict.go.jp>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "semsis"}]

[tool.poetry.dependencies]
python = "^3.8.1"
torch = "^2.0.0"
transformers = "^4.33.2"
sentence-transformers = "^2.2.2"
h5py = "^3.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
mypy = "^1.5.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[tool.ruff.lint]
extend-select = ["I"]

[tool.coverage.run]
omit = ["*_test.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
