[project]
name = "semsis"
version = "0.1.3"
description = "A libary for semantic similarity search"
readme = "README.rst"
authors = [
    { name = "Hiroyuki Deguchi", email = "deguchi.hiroyuki@nict.go.jp" }
]
requires-python = ">=3.9"
dependencies = [
    "h5py>=3.12.1",
    "sentence-transformers>=3.3.1",
    "simple-parsing>=0.1.7",
    "torch>=2.0.0",
    "transformers>=4.47.1",
]

[project.scripts]
semsis = "semsis:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.6",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.coverage.run]
omit = ["*_test.py"]
